--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "authentication-authorization",
+  "name": "authentication",
   "version": "1.0.0",
-  "description": "User: Authentication and Authorization",
+  "description": "Authentication: start with Authentication",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,14 @@
   "author": "ErfanCE",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.0"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.12.2"
+  },
+  "devDependencies": {
+    "persian-date": "^1.1.0"
   }
 }
